--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -2497,6 +2497,11 @@ pipetets)}
 \item{Dr. Chirayath said to continue process}
 \item{Jeremy had interesting results, the flux spectra
   turned from kind of fast to thermal, Gd burned out}
+\item{Robert Zedric also noted that a higher dead time
+  could be used, and that our detector is between
+  a Nonparalyzable and paralyzable model, and that
+  we could try to work through the math on that,
+  Knoll page 122}
 \end{itemize}
 
 \begin{figure}[H] % Example of including images
@@ -2514,6 +2519,17 @@ pipetets)}
 %-----------------------------------------------------------------------
 
 \labday{Thursday, 17 November 2016}
+
+
+\experiment{Cycle_X3_round_2_alpha}
+Note all alpha counts were done on the 9mm height setting
+on the pips detector.
+\begin{todolist}
+\item[\done]{Start Count $\boxed{10\ or\ Chip}$ (10:52 am)}
+\item[\done]{End Count $\boxed{10\ or\ Chip}$ Run time 7.54 hrs}
+\item[\done]{Start count $\boxed{10\ aq\ Chip}$ (6:29 pm)}
+\end{todolist}
+
 
 \experiment{56_run}
 
@@ -2585,7 +2601,11 @@ of the aqueous contact.
 
 \begin{todolist}
 \item[\done]{Combine $\boxed{5\ aq}$ and $\boxed{6\ aq}$
-  into a 15 ml vial labeded $\boxed{56}$.}
+  into $\boxed{5\ aq}$}
+\item[\done]{Take 800 $\mu$l out of $\boxed{5\ aq}$ and transfer
+  into a 15 ml vial labeded $\boxed{56}$ (for some reason
+  it was really difficult to get a precise volume - had to do
+  many times)}
 \item[\done]{Start count $\boxed{56}$ at 26 cm}
 \end{todolist}
 
@@ -2671,12 +2691,10 @@ Second Contact...
 \item[\done]{Pipette with disposable pipette the organic phase
   first, then the aqueous (for all three vials),
   as much as so that there is no mixing.
-  Then transferred the boundary to a smaller vial, centrifuged,
-  and separated further. Counting solutions were
-  also prepared of 250 $\mu$l of each of the solutions
-\textbf{Remembered to centrifuge and to be VERY careful to not mix phases}.
-  A picture will be provided for the whole process for $\boxed{8}$
-  on the following page \textbf{Modify picture for this provess}
+  Then transferred the boundary to a smaller vial, let sit.
+  Prepare counting solutions of 250 $\mu$l of each of the solutions
+  A picture will be provided for the whole process for $\boxed{8\ aq}$
+  on the following page
   , below are specific notes about what
   occured during the experiment.}
   \begin{itemize}
@@ -2690,18 +2708,16 @@ Second Contact...
 \item[\done]{Radiac wash the above tubes, and store in fumehood behind
   lead - wait to count}
 \item[\done]{Clean stuff in glovebox}
-\item{Start count $\boxed{9\ orII\ C}$ at 0 cm 4:06 pm}
+\item[\done]{Start count $\boxed{9\ orII\ C}$ at 0 cm 4:06 pm}
 \end{todolist}
-
-
 
 \begin{figure}[H] % Example of including images
 \begin{center}
   \includegraphics[width=0.8\linewidth]
                   {Figures/Cycle_x3_round_2_extraction_2}
 \end{center}
-\caption{Extraction three times round 2 experimental setup}
-\label{fig:example2}
+\caption{Extraction three times round 2 extraction 2}
+\label{fig:round2_extraction2}
 \end{figure}
 
 
@@ -2713,13 +2729,183 @@ Second Contact...
 \labday{Friday, 18 November 2016}
 
 
+
+\experiment{Cycle_X3_round_2_alpha}
+Note all alpha counts were done on the 9mm height setting
+on the pips detector.
+\begin{todolist}
+\item[\done]{End Count $\boxed{10\ aq\ Chip}$ Run time 14.4 hrs}
+\item[\done]{Start Count $\boxed{9\ or\ Chip}$ (9:02 am)}
+\item[\done]{End Count $\boxed{9\ or\ Chip}$ Run time 6.08 hrs}
+\item[\done]{Start count $\boxed{9\ aq\ Chip}$ (3:11 pm)}
+\end{todolist}
+
+
+
 \experiment{Process_X3}
 
 \begin{todolist}
-\item[\done]{End count $\boxed{9\ orII\ C}$}
-\item[\done]{Start count $\boxed{8\ orII\ C}$ at 0 cm 8:56 am}
-\item[\done]{End count $\boxed{8\ orII\ C}$}
+\item[\done]{End count $\boxed{9\ orII\ C}$ RunTime 16.5 hr}
+\item[\done]{Start count $\boxed{8\ orII\ C}$ at 0 cm 8:56 am
+             end around 11:15 pm (count  $\boxed{56\ Big}$)}
+\item[\done]{End count $\boxed{8\ orII\ C}$ (RunTime 2.254 hrs)}
 \item[\done]{Start count $\boxed{10\ orII\ C}$ at 0 cm 1:04 pm}
+\end{todolist}
+
+
+\experiment{56_run}
+Talked about volume changes with Kevin, using 50 ml tubes
+for the whole experiment
+\begin{todolist}
+\item[\done]{Transfer $\boxed{56}$ into glovebox with labeled
+  50 ml tubes $\boxed{56\ Big}$, $\boxed{56\ Big\ Aq}$,
+  and $\boxed{56\ Big\ or}$}
+\item[\done]{Take the 800 $\mu$l out of $\boxed{56}$, and
+  transfer to $\boxed{56\ Big}$ (had to do middle step of
+  transfering everything to $\boxed{5 \ aq}$)}
+\item[\done]{Take $\boxed{56\ Big}$ out of glovebox}
+\item[\done]{Start count $\boxed{56\ Big}$ (11:17 am) to
+             around 1:04 (started count $\boxed{10\ orII\ C}$}
+\end{todolist}
+Just prior to stopping the above count, Dr. Burns suggested
+keeping all 800 $\mu$l of the aqueous in $\boxed{56}$ instead
+of $\boxed{56\ Big}$ and just but all organic into a 50 ml tube.
+So now...
+\begin{todolist}
+\item[\done]{Transfer $\boxed{56\ Big}$ into glovebox (wrapped
+  in a ziplock bag so that less evaporation)}
+\item[\done]{Transfer 800 $\mu$l out of $\boxed{56\ Big}$ into
+  $\boxed{56}$}
+\item[\done]{Add 8.0 $\mu$l of TBP to $\boxed{56}$}
+\item[\done]{Shake $\boxed{56}$ on vortex mixer for 15 minutes}
+\item[\done]{Convert a 2.5 ml vial holder (a 15 ml tube) to a
+  buddy, by adding 800 $\mu$l of DI water and 8.0 ml of TBP
+  to it...scratch out label. $\boxed{56\ Buddy}$}
+\item[\done]{Centrifuge $\boxed{56}$ with $\boxed{56\ Buddy}$
+  for 15 minutes at 3,300 rpm}
+\item[\done]{Carefully pipette with disposable pipette,
+  as much of top phase of $\boxed{56}$ as possible to
+  $\boxed{56\ Or}$ (50 ml tube)}
+\item[\done]{Carefully pipette with new disposable pipette,
+  the bottom phase of $\boxed{56}$ (aq) to $\boxed{56\ aq}$ (15 ml tube)}
+\item[\done]{Clean up work area in glovebox}
+\item[\done]{Transfer interface of $\boxed{56}$ to $\boxed{56\ mix}$,
+  seal and let sit for the time being}
+\item[\done]{Transfer out of glovebox
+  $\boxed{56\ aq}$ and $\boxed{56\ or}$. Clean with radiac wipes}
+\item[\done]{Count $\boxed{56\ or}$ (2:28 pm),
+  expecting 20 cps (calculation below,
+  where 0.01 is the expected D-value of \tss{137}Cs)}
+\end{todolist}
+\begin{align*}
+  \frac{200\ \text{cps\tsbs{aq}}}{800\ \mu\text{l}}\cdot8,000\ \mu\text{l}
+  \cdot0.01=20\ \text{cps\tsbs{or}}
+\end{align*}
+Sadly, first glance gives around 0.1 cps\tsbs{or}, I have failed again.
+Sorry Dr. Chirayath. I am feeling fairly defeated, I just want to go home.
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Sunday, 20 November 2016}
+
+\experiment{Cycle_X3_round_2_alpha}
+Note all alpha counts were done on the 9mm height setting
+on the pips detector.
+\begin{todolist}
+\item[\done]{End Count $\boxed{9\ aq\ Chip}$ Run time 18.5 hrs}
+\item[\done]{Start Count $\boxed{10\ Chip}$ (1:34 pm)}
+\end{todolist}
+
+
+\experiment{56_run}
+\begin{todolist}
+\item[\done]{End count $\boxed{56\ or}$}
+\item[\done]{Start count $\boxed{56\ aq}$ (1:34 pm)}
+\end{todolist}
+
+
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Monday, 21 November 2016}
+
+\begin{todolist}
+\item[\done]{Update laboratory notebook with all the experiments from last
+  week, took most of the morning}
+\end{todolist}
+
+\begin{itemize}
+\item{Dr. Mariannos experiment today started around 3:00 pm}
+\end{itemize}
+
+\experiment{Cycle_X3_round_2_alpha}
+Note all alpha counts were done on the 9mm height setting
+on the pips detector.
+\begin{todolist}
+\item[\done]{End Count $\boxed{10\ Chip}$ Run time 18.5 hrs}
+\item[\done]{Start Count $\boxed{9\ Chip}$ (10:00 am)}
+\item[\done]{End Count $\boxed{9\ Chip}$ Runtime 5.3 hrs}
+\item[\done]{Start Count $\boxed{8\ aq\ Chip}$ (3:21 pm)}
+\end{todolist}
+
+
+\experiment{Process_X3}
+Reason why there is a ``gap'' in counting is that there
+is another experiment going on, and was counting that one.
+\begin{todolist}
+\item[\done]{Start count $\boxed{9\ aqII}$ (10:02 am)}
+\item[\done]{End count $\boxed{9\ aqII}$ Runtime 5.02 hr}
+\item[\done]{Start count $\boxed{9\ aqII}$ (3:25 pm) -
+  yes I accidentally counted the same thing twice, there is a lot
+  going on}
+\end{todolist}
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Tuesday, 22 November 2016}
+
+\begin{todolist}
+\item{Modify spreadsheet so that the three errors can
+  be minimized}
+\item{Find references for D-values}
+\end{todolist}
+
+
+\experiment{Cycle_X3_round_2_alpha}
+Note all alpha counts were done on the 9mm height setting
+on the pips detector.
+\begin{todolist}
+\item[\done]{End Count $\boxed{8\ aq\ Chip}$ Run time 17.1 hrs}
+\item[\done]{Start Count $BLAH$ (?? am)}
+\item{End Count $BLAH$ Runtime ?? hrs}
+\item{Start Count $BLAH$ (?? pm)}
+\item{Analyze Data from alpha spectrum}
+\end{todolist}
+
+\experiment{Process_X3}
+
+\begin{todolist}
+\item[\done]{End count $\boxed{9\ aqII}$ Runtime 16.7 hr}
+\item[\done]{Start count $\boxed{??}$ (?? am)}
+\item{End count $??$ Runtime ?? hrs}
+\item{Start Count $??$ (?? pm)}
+\item{Analyze second extraction data}
+\end{todolist}
+
+
+\experiment{56_run}
+\begin{todolist}
+\item{Measure volumes of $\boxed{56\ aq}$ and $\boxed{56\ or}$}
+\item{Analyze data from 56 experiment}
 \end{todolist}
 
 
