--- a/Notebook/lab_book_1.tex
+++ b/Notebook/lab_book_1.tex
@@ -2885,27 +2885,81 @@ Note all alpha counts were done on the 9mm height setting
 on the pips detector.
 \begin{todolist}
 \item[\done]{End Count $\boxed{8\ aq\ Chip}$ Run time 17.1 hrs}
-\item[\done]{Start Count $BLAH$ (?? am)}
-\item{End Count $BLAH$ Runtime ?? hrs}
-\item{Start Count $BLAH$ (?? pm)}
-\item{Analyze Data from alpha spectrum}
+\item[\done]{Start Count $\boxed{8\ Chip}$}
+\item[\done]{End Count $\boxed{8\ Chip}$}
+\item[\done]{Start Count $\boxed{8\ or\ Chip}$}
 \end{todolist}
 
 \experiment{Process_X3}
 
 \begin{todolist}
-\item[\done]{End count $\boxed{9\ aqII}$ Runtime 16.7 hr}
-\item[\done]{Start count $\boxed{??}$ (?? am)}
-\item{End count $??$ Runtime ?? hrs}
-\item{Start Count $??$ (?? pm)}
-\item{Analyze second extraction data}
+\item[\done]{End count $\boxed{9\ aqII\ C}$ Runtime 16.7 hr}
+\item[\done]{Start count $\boxed{8\ aqII\ C}$}
+\item[\done]{End count $\boxed{8\ aqII\ C}$}
+  \begin{itemize}
+  \item{Start Count from other experiment}
+  \end{itemize}
 \end{todolist}
 
 
 \experiment{56_run}
 \begin{todolist}
-\item{Measure volumes of $\boxed{56\ aq}$ and $\boxed{56\ or}$}
+\item{Start with analysis of first extraction}
+  \begin{itemize}
+  \item{Things are discouraging...still getting D of 10\tss{-5} for
+    calculation using organic and calculation using aqueous}
+  \item{The other elements are within reason}
+  \item{\textbf{What is different between my experiments and Jarrod's past experiments?}}
+  \item{Also note, 15 ml tube has about 3\% difference from 50 ml tube}
+  \end{itemize}
+\item[\done]{Create new TBP, 15 ml TBP + 35 ml kerosene $\rightarrow\boxed{TBP\ Remake}$}
+\item[\done]{Transfer $\boxed{TBP\ Remake}$ and $\boxed{56\ aq}$ into glovebox}
+\item[\done]{Measured volume of $\boxed{56\ aq}$ to be 700 $\mu$l...why
+  it so low? We had some evaporation?}
+\item[\done]{Add 7.0 ml of $\boxed{TBP\ Remake}$ to $\boxed{56\ aq}$}
+\item[\done]{Shake $\boxed{56\ aq}$ for 15 minutes on pulse mode}
+\item[\done]{Create vials $\boxed{56\ AqII}$ (15 ml) and $\boxed{56\ OrII}$ (50 ml) and $\boxed{56\ mixII}$
+  and transfer into glovebox}
+\item[\done]{Create a $\boxed{Buddy}$ for centrifuging (unlabled - sorry!)}
+\item[\done]{Centrifuge $\boxed{56\ aq}$ with $\boxed{Buddy}$ for 15 minutes at 3,300 rpm}
+\item[\done]{Separate (top phase first) $\boxed{56\ aq}$ into $\boxed{56\ AqII}$, $\boxed{56\ OrII}$,
+  and $\boxed{56\ mixII}$}
+\item[\done]{Transfer $\boxed{56\ AqII}$ and $\boxed{56\ OrII}$ out of glovebox,
+  clean with radiac wipes}
+\item[\done]{Start counting $\boxed{56\ OrII}$ at 26 cm away from detector}
+  \begin{itemize}
+  \item{Initially looks like the sample still has 10\tss{-5} for \tss{137}Cs}
+  \end{itemize}
+\end{todolist}
+
+
+
+
+
+%------------------------------------------------------------------------
+%	LAB BOOK day
+%-----------------------------------------------------------------------
+
+\labday{Wednesday, 23 November 2016}
+
+\experiment{56_run}
+\begin{todolist}
+\item{Stop count $\boxed{56\ orII}$}
 \item{Analyze data from 56 experiment}
+\end{todolist}
+
+\experiment{Process_X3}
+\begin{todolist}
+\item{Start Count $\boxed{10\ aqII\ C}$}
+\item{Analyze second extraction data}
+\end{todolist}
+
+\experiment{Cycle_X3_round_2_alpha}
+Note all alpha counts were done on the 9mm height setting
+on the pips detector.
+\begin{todolist}
+\item{End Count $\boxed{8\ or\ Chip}$}
+\item{Analyze Data from alpha spectrum}
 \end{todolist}
 
 
